--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "fast-vue-md-loader",
+  "name": "@vant/markdown-loader",
   "version": "1.0.3",
   "description": "Simple and fast vue markdown loader",
   "main": "lib/index.js",
   "scripts": {
     "build": "babel src --out-dir lib",
-    "release": "npm run build && npm publish"
+    "release": "npm run build && npm publish --access public"
   },
   "repository": {
     "type": "git",
