--- a/package.json
+++ b/package.json
@@ -1,29 +1,23 @@
 {
   "name": "@vant/markdown-loader",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "description": "Simple and fast vue markdown loader",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "build": "babel src --out-dir lib",
-    "release": "npm run build && npm publish --access public"
+    "release": "npm publish --access public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chenjiahan/fast-vue-md-loader.git"
   },
-  "author": "",
+  "author": "chenjiahan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/chenjiahan/fast-vue-md-loader/issues"
   },
   "homepage": "https://github.com/chenjiahan/fast-vue-md-loader#readme",
   "dependencies": {
-    "highlight.js": "^9.12.0",
-    "markdown-it": "^8.4.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.0"
+    "highlight.js": "^9.15.6",
+    "markdown-it": "^8.4.2"
   }
 }
