--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vant/markdown-loader",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Simple and fast vue markdown loader",
   "main": "src/index.js",
   "scripts": {
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/chenjiahan/fast-vue-md-loader#readme",
   "dependencies": {
     "highlight.js": "^9.15.6",
-    "markdown-it": "^8.4.2"
+    "markdown-it": "^8.4.2",
+    "markdown-it-anchor": "^5.2.4",
+    "transliteration": "^2.1.4"
   }
 }
