--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/chenjiahan/fast-vue-md-loader#readme",
   "dependencies": {
     "highlight.js": "^9.15.6",
+    "loader-utils": "^1.2.3",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.2.4",
     "transliteration": "^2.1.4"
