--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/chenjiahan/fast-vue-md-loader#readme",
   "dependencies": {
+    "front-matter": "^3.0.2",
     "highlight.js": "^9.15.6",
     "loader-utils": "^1.2.3",
     "markdown-it": "^8.4.2",
